# claudewatts

./: .gitignore  README.md  claudewatts.py  cwatts  pyproject.toml  town.py
.claude-plugin/: marketplace.json  plugin.json
commands/: report.md  town.md
docs/: INSTALL.md  METHODOLOGY.md  index.html  style.css
docs/assets/: README.md
examples/: example-output.json  example-report.txt  example-statusline.txt
scripts/: generate-screenshots.sh
