[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudewatts"
version = "0.2.0"
description = "Estimate the electrical energy your Claude Code sessions consume — in watt-hours, kettle-boils and village-days."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "John" }]
keywords = ["claude", "claude-code", "energy", "watts", "llm", "sustainability", "statusline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
town = ["pyxel>=2.0"]

[project.scripts]
cwatts = "claudewatts:main"

[project.urls]
Homepage = "https://jonnonz1.github.io/claudewatts/"
Repository = "https://github.com/jonnonz1/claudewatts"
Issues = "https://github.com/jonnonz1/claudewatts/issues"

[tool.hatch.build.targets.wheel]
include = ["claudewatts.py", "town.py"]

[tool.hatch.build.targets.sdist]
include = ["claudewatts.py", "town.py", "cwatts", "README.md", "LICENSE", "docs/", "examples/"]
